--- a/_assets/main.css
+++ b/_assets/main.css
@@ -1,3 +1,53 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes slideOut {
+  75% {
+    max-height: 10rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    border-bottom-width: 2px;
+    overflow: hidden;
+  }
+
+  80% {
+    border-bottom-width: 0;
+  }
+
+  100% {
+    max-height: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    border-bottom-width: 0;
+    overflow: hidden;
+  }
+}
+
+.slide-out {
+  animation-duration: 0.5s;
+  animation-iteration: 1;
+  animation-fill-mode: forwards;
+  animation-name: slideOut;
+}
+
+#comments:empty {
+  display: none;
+}
+
+.loading:after {
+  overflow: hidden;
+  display: inline-block;
+  vertical-align: bottom;
+  animation: ellipsis steps(4, end) 900ms infinite;
+  content: "\2026";
+  /* ascii code for the ellipsis character */
+  width: 0px;
+}
+
+@keyframes ellipsis {
+  to {
+    width: 1.25em;
+  }
+}
