--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>A Basic HTML5 Template</title>
+  <title>rnuke</title>
   <meta name="description" content="A simple HTML5 Template for new projects.">
   <meta name="author" content="SitePoint">
 
-  <meta property="og:title" content="A Basic HTML5 Template">
+  <meta property="og:title" content="rnuke">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
   <meta property="og:description" content="A simple HTML5 Template for new projects.">
@@ -18,15 +18,16 @@
   <!-- <link rel="icon" href="/favicon.ico">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png"> -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
   <script type="module" src="assets/main.js?v=1.0"></script>
   <link rel="stylesheet" href="assets/main.css?v=1.0">
 </head>
 
-<body class="bg-gray-100">
-  {%- include navbar.html -%}
+<body data-controller="{{ page.controller }}" class="bg-zinc-900 font-serif text-zinc-100">
   <main class="container mx-auto px-4 py-10">
-
     {{ content }}
   </main>
 </body>
