--- a/_assets/main.css
+++ b/_assets/main.css
@@ -3,6 +3,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  font-size: 10px;
+}
+
 @keyframes slideOut {
   75% {
     max-height: 10rem;
